SFDCProject/src/objects/Release_Management_Record__c.object
<CustomObject>
    <description>This objects stores all the information about the deployment activities and status.</description>
    <fields>
        <fullName>Already_available_in_Ditto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already available in Ditto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Already_available_in_Localdev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already available in Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Already_available_in_Majqa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already available in QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Already_available_in_Majstg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already available in Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_date_requested__c</fullName>
        <description>The requested date and time for the deployment to happen</description>
        <label>Deployment date requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason behind deployment</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story #</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Management_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Release Management Record</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Release Management Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Management Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_in_the_future_only</fullName>
        <active>true</active>
        <description>Past date entered should be invalid. Date should be validated for future dates only</description>
        <errorConditionFormula>DATEVALUE(Deployment_date_requested__c) &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Deployment date requested should be set to future date!</errorMessage>
    </validationRules>
</CustomObject>